--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,12 @@ name: Fetch AI News Daily
 
 on:
   schedule:
-    # Runs every day at 05:00 UTC (which is 07:00 German summer time)
+    # Läuft jeden Tag um 05:00 Uhr UTC
     - cron: '0 5 * * *'
-  # This "workflow_dispatch" allows you to start the job manually
+  # Erlaubt den manuellen Start des Jobs
   workflow_dispatch:
 
-# Added permissions block to allow writing to the repository
+# HINZUGEFÜGT: Gibt dem Workflow die nötigen Schreibrechte
 permissions:
   contents: write
 
@@ -15,31 +15,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Check out the repository to the GitHub server
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      # Step 2: Set up the desired Python version
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # Step 3: Install the required Python packages (feedparser, etc.)
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # Step 4: Run the main script
       - name: Run script to fetch and summarize news
         run: python fetch_news.py
         env:
-          # The script gets the API key from the "secrets" vault here
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
-      # Step 5: Automatically commit and push the changed files (data.json, etc.)
       - name: Commit and push if changed
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "📰 Update daily news"
-          # Important: We need to monitor both files!
-          file_pattern: "data.json processed_links.json"
+          commit_message: "📰 Update daily news and summary"
+          # KORRIGIERT: Überwacht jetzt auch die summary.json
+          file_pattern: "data.json summary.json"
